--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
+    "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.16.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.514.0",
