--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -11,6 +12,7 @@
     "axios": "^1.9.0",
     "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.16.0",
+    "generate-password": "^1.7.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.514.0",
     "react": "^19.1.0",
