--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.16.0",
     "generate-password": "^1.7.1",
     "jwt-decode": "^4.0.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.514.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
