--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -21,6 +22,8 @@
     "generate-password": "^1.7.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.1",
     "node-cron": "^4.1.1",
     "nodemailer": "^7.0.3",
