--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "socket.io-client": "^4.8.1",
     "tailwind-scrollbar": "^3.1.0",
     "toastify": "^2.0.1",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
