--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "react-textarea-autosize": "^8.5.9",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
     "tailwind-scrollbar": "^3.1.0",
