--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,13 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
     "react-textarea-autosize": "^8.5.9",
     "react-toastify": "^11.0.5",
+    "remark-gfm": "^4.0.1",
     "socket.io-client": "^4.8.1",
     "tailwind-scrollbar": "^3.1.0",
     "toastify": "^2.0.1",
